[gd_scene load_steps=6 format=3 uid="uid://dl7p14wiagj5w"]

[ext_resource type="Script" path="res://scenes/stone_resource.gd" id="1_aemh4"]
[ext_resource type="ArrayMesh" uid="uid://b7ug4sb1ug6m5" path="res://assets/stone_tallB.obj" id="2_mhuyt"]
[ext_resource type="ArrayMesh" uid="uid://c1fuiwy3ubqcp" path="res://assets/tree_thin_dark.obj" id="3_fk0o2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_25ai5"]
size = Vector3(0.607775, 0.81672, 0.641043)

[sub_resource type="BoxShape3D" id="BoxShape3D_oeqnq"]
size = Vector3(0.445881, 0.767607, 0.573009)

[node name="StoneResource" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_aemh4")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.487188, 0)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.115824, 0)
shape = SubResource("BoxShape3D_25ai5")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.134807, -0.0100298)
shape = SubResource("BoxShape3D_oeqnq")

[node name="STONE" type="MeshInstance3D" parent="StaticBody3D/CollisionShape3D"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.00578731, -0.357018, 0.00763852)
mesh = ExtResource("2_mhuyt")
skeleton = NodePath("../../..")

[node name="WOOD" type="MeshInstance3D" parent="StaticBody3D/CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0417175, -0.366278, 0.0541969)
mesh = ExtResource("3_fk0o2")
skeleton = NodePath("../../..")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
